<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_your"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        android:textColor="@android:color/white"
        android:background="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="8dp"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/in_minutes"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/btn_datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/txt_selectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/txt_selectedDateSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_date"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/txt_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp" />

    <TextView
        android:id="@+id/txt_minutesSub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_your_age_in_minutes"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone" />

</LinearLayout>